Change some file names

--- a/Latex Document/Thesis.bib
+++ b/Latex Document/Thesis.bib
@@ -67,7 +67,14 @@
   publisher={Elsevier}
 }
 
-%%%%%%%%%%%%%% Statistical Learning %%%%%%%%%%%%%%
+%%%%%%%%%%%%%% Non articles %%%%%%%%%%%%%%
+
+@phdthesis{martin2017unsupervised,
+  title={Unsupervised feature learning applied to condition monitoring},
+  author={Mart{\'\i}n del Campo Barraza, Sergio},
+  year={2017},
+  school={Lule{\aa} University of Technology}
+}
 
 @book{james2013introduction,
   title={An introduction to statistical learning},
@@ -76,6 +83,8 @@
   year={2013},
   publisher={Springer}
 }
+
+%%%%%%%%%%%%%% Statistical Learning %%%%%%%%%%%%%%
 
 @article{soualhi2021novel,
   title={A novel feature extraction method for the condition monitoring of bearings},
@@ -106,4 +115,90 @@
   volume={9},
   number={1},
   year={2017}
+}
+
+@article{bleakie2013feature,
+  title={Feature extraction, condition monitoring, and fault modeling in semiconductor manufacturing systems},
+  author={Bleakie, Alexander and Djurdjanovic, Dragan},
+  journal={Computers in Industry},
+  volume={64},
+  number={3},
+  pages={203--213},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@article{teti2010advanced,
+  title={Advanced monitoring of machining operations},
+  author={Teti, Roberto and Jemielniak, Krzysztof and O’Donnell, Garret and Dornfeld, David},
+  journal={CIRP annals},
+  volume={59},
+  number={2},
+  pages={717--739},
+  year={2010},
+  publisher={Elsevier}
+}
+
+@article{zhang2016degradation,
+  title={Degradation feature selection for remaining useful life prediction of rolling element bearings},
+  author={Zhang, Bin and Zhang, Lijun and Xu, Jinwu},
+  journal={Quality and Reliability Engineering International},
+  volume={32},
+  number={2},
+  pages={547--554},
+  year={2016},
+  publisher={Wiley Online Library}
+}
+
+@article{liao2010feature,
+  title={Feature extraction and selection from acoustic emission signals with an application in grinding wheel condition monitoring},
+  author={Liao, T Warren},
+  journal={Engineering Applications of Artificial Intelligence},
+  volume={23},
+  number={1},
+  pages={74--84},
+  year={2010},
+  publisher={Elsevier}
+}
+
+@article{wang2016multiple,
+  title={Multiple physical signals based residual life prediction model of slewing bearing},
+  author={Wang, Hua and Tang, Yan and Hong, Rongjing},
+  journal={Journal of Vibroengineering},
+  volume={18},
+  number={7},
+  pages={4340--4353},
+  year={2016},
+  publisher={JVE International Ltd.}
+}
+
+@article{buckley2023feature,
+  title={A feature extraction \& selection benchmark for structural health monitoring},
+  author={Buckley, Tadhg and Ghosh, Bidisha and Pakrashi, Vikram},
+  journal={Structural Health Monitoring},
+  volume={22},
+  number={3},
+  pages={2082--2127},
+  year={2023},
+  publisher={SAGE Publications Sage UK: London, England}
+}
+
+@article{kateris2014machine,
+  title={A machine learning approach for the condition monitoring of rotating machinery},
+  author={Kateris, Dimitrios and Moshou, Dimitrios and Pantazi, Xanthoula-Eirini and Gravalos, Ioannis and Sawalhi, Nader and Loutridis, Spiros},
+  journal={Journal of Mechanical Science and Technology},
+  volume={28},
+  pages={61--71},
+  year={2014},
+  publisher={Springer}
+}
+
+@article{hong2014condition,
+  title={Condition assessment for the performance degradation of bearing based on a combinatorial feature extraction method},
+  author={Hong, Sheng and Zhou, Zheng and Zio, Enrico and Hong, Kan},
+  journal={Digital Signal Processing},
+  volume={27},
+  pages={159--166},
+  year={2014},
+  publisher={Elsevier}
 }
