Add in all references to Bibliography and remove heading for References

--- a/Latex Document/Thesis.bib
+++ b/Latex Document/Thesis.bib
@@ -202,3 +202,159 @@
   year={2014},
   publisher={Elsevier}
 }
+
+@article{buckley2023feature,
+  title={A feature extraction \& selection benchmark for structural health monitoring},
+  author={Buckley, Tadhg and Ghosh, Bidisha and Pakrashi, Vikram},
+  journal={Structural Health Monitoring},
+  volume={22},
+  number={3},
+  pages={2082--2127},
+  year={2023},
+  publisher={SAGE Publications Sage UK: London, England}
+}
+
+@article{zhang2019new,
+  title={A new feature extraction approach using improved symbolic aggregate approximation for machinery intelligent diagnosis},
+  author={Zhang, Yulong and Duan, Lixiang and Duan, Menglan},
+  journal={Measurement},
+  volume={133},
+  pages={468--478},
+  year={2019},
+  publisher={Elsevier}
+}
+
+@article{tiboni2022review,
+  title={A review on vibration-based condition monitoring of rotating machinery},
+  author={Tiboni, Monica and Remino, Carlo and Bussola, Roberto and Amici, Cinzia},
+  journal={Applied Sciences},
+  volume={12},
+  number={3},
+  pages={972},
+  year={2022},
+  publisher={MDPI}
+}
+
+@inproceedings{schneider2018automatic,
+  title={Automatic feature extraction and selection for condition monitoring and related datasets},
+  author={Schneider, Tizian and Helwig, Nikolai and Sch{\"u}tze, Andreas},
+  booktitle={2018 IEEE International Instrumentation and Measurement Technology Conference (I2MTC)},
+  pages={1--6},
+  year={2018},
+  organization={IEEE}
+}
+
+@article{de2018comparison,
+  title={Comparison of automated feature selection and reduction methods on the condition monitoring issue},
+  author={de Calle, Kerman L{\'o}pez and Ferreiro, Susana and Arnaiz, Aitor and Sierra, Basilio},
+  journal={Procedia Manufacturing},
+  volume={16},
+  pages={2--9},
+  year={2018},
+  publisher={Elsevier}
+}
+
+@article{hong2014condition,
+  title={Condition assessment for the performance degradation of bearing based on a combinatorial feature extraction method},
+  author={Hong, Sheng and Zhou, Zheng and Zio, Enrico and Hong, Kan},
+  journal={Digital Signal Processing},
+  volume={27},
+  pages={159--166},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@article{saucedo2021condition,
+  title={Condition monitoring method for the detection of fault graduality in outer race bearing based on vibration-current fusion, statistical features and neural network},
+  author={Saucedo-Dorantes, Juan-Jose and Zamudio-Ramirez, Israel and Cureno-Osornio, Jonathan and Osornio-Rios, Roque Alfredo and Antonino-Daviu, Jose Alfonso},
+  journal={Applied Sciences},
+  volume={11},
+  number={17},
+  pages={8033},
+  year={2021},
+  publisher={MDPI}
+}
+
+@article{lu2016degradation,
+  title={Degradation trend estimation of slewing bearing based on LSSVM model},
+  author={Lu, Chao and Chen, Jie and Hong, Rongjing and Feng, Yang and Li, Yuanyuan},
+  journal={Mechanical Systems and Signal Processing},
+  volume={76},
+  pages={353--366},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{javed2012features,
+  title={Features selection procedure for prognostics: An approach based on predictability},
+  author={Javed, Kamran and Gouriveau, Rafael and Zemouri, Ryad and Zerhouni, Noureddine},
+  journal={IFAC Proceedings Volumes},
+  volume={45},
+  number={20},
+  pages={25--30},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@article{rauber2014heterogeneous,
+  title={Heterogeneous feature models and feature selection applied to bearing fault diagnosis},
+  author={Rauber, Thomas W and de Assis Boldt, Francisco and Varejao, Flavio Miguel},
+  journal={IEEE Transactions on Industrial Electronics},
+  volume={62},
+  number={1},
+  pages={637--646},
+  year={2014},
+  publisher={IEEE}
+}
+
+@article{guo2016multifeatures,
+  title={Multifeatures fusion and nonlinear dimension reduction for intelligent bearing condition monitoring},
+  author={Guo, Liang and Gao, Hongli and Huang, Haifeng and He, Xiang and Li, ShiChao and others},
+  journal={Shock and Vibration},
+  volume={2016},
+  year={2016},
+  publisher={Hindawi}
+}
+
+@article{assafo2023stability,
+  title={On the Stability and Homogeneous Ensemble of Feature Selection for Predictive Maintenance: A Classification Application for Tool Condition Monitoring in Milling},
+  author={Assafo, Maryam and St{\"a}dter, Jost Philipp and Meisel, Tenia and Langend{\"o}rfer, Peter},
+  journal={Sensors},
+  volume={23},
+  number={9},
+  pages={4461},
+  year={2023},
+  publisher={MDPI}
+}
+
+@article{li2023optimal,
+  title={Optimal symbolic entropy: An adaptive feature extraction algorithm for condition monitoring of bearings},
+  author={Li, Chunyun and Noman, Khandaker and Liu, Zheng and Feng, Ke and Li, Yongbo},
+  journal={Information Fusion},
+  volume={98},
+  pages={101831},
+  year={2023},
+  publisher={Elsevier}
+}
+
+@article{malhi2004pca,
+  title={PCA-based feature selection scheme for machine defect classification},
+  author={Malhi, Arnaz and Gao, Robert X},
+  journal={IEEE transactions on instrumentation and measurement},
+  volume={53},
+  number={6},
+  pages={1517--1525},
+  year={2004},
+  publisher={IEEE}
+}
+
+@article{d2019physical,
+  title={Physical and Metrological Approach for Feature’s Definition and Selection in Condition Monitoring},
+  author={D’Emilia, Giulio and Gaspari, Antonella and Natale, Emanuela},
+  journal={Sensors},
+  volume={19},
+  number={23},
+  pages={5186},
+  year={2019},
+  publisher={MDPI}
+}
