--- a/Latex Document/Thesis.tex
+++ b/Latex Document/Thesis.tex
@@ -179,7 +179,22 @@ $$ \hat{Y} = (X^T \cdot X) \cdot X^T \cdot y $$
 $$ AIC = 2k - 2Ln(L) $$  
 $$ nAIC = log $$
 
-~\cite{}
+These references haven't been used yet.
+A feature extraction \& selection benchmark for structural health monitoring ~\cite{buckley2023feature}
+A new feature extraction approach using improved symbolic aggregate approximation for machinery intelligent~\cite{zhang2019new}
+A review on vibration-based condition monitoring of rotating machinery~\cite{tiboni2022review}
+Automatic feature extraction and selection for condition monitoring and related datasets~\cite{schneider2018automatic}
+Comparison of automated feature selection and reduction methods on the condition monitoring issue~\cite{de2018comparison}
+Condition assessment for the performance degradation of bearing based on a combinatorial feature extraction method~\cite{hong2014condition}
+Condition monitoring method for the detection of fault graduality in outer race bearing based on vibration-current fusion, statistical features and neural network~\cite{saucedo2021condition}
+Degradation trend estimation of slewing bearing based on LSSVM model~\cite{lu2016degradation}
+Features selection procedure for prognostics: An approach based on predictability~\cite{javed2012features}
+Heterogeneous feature models and feature selection applied to bearing fault diagnosis~\cite{rauber2014heterogeneous}
+Multifeatures fusion and nonlinear dimension reduction for intelligent bearing condition monitoring~\cite{guo2016multifeatures}
+On the Stability and Homogeneous Ensemble of Feature Selection for Predictive Maintenance: A Classification Application for Tool Condition Monitoring in Milling~\cite{assafo2023stability}
+Optimal symbolic entropy: An adaptive feature extraction algorithm for condition monitoring of bearings~\cite{li2023optimal}
+PCA-based feature selection scheme for machine defect classification~\cite{malhi2004pca}
+Physical and Metrological Approach for Feature’s Definition and Selection in Condition Monitoring~\cite{d2019physical}
 
 \clearpage  
 \section{Description of Data/System/Data Processing}
@@ -396,7 +411,7 @@ K-means clustering approach.
 Discuss results and put in context/comparison with references at the beginning. Future work.
 \clearpage
 \section{References} 
-\printbibliography 
+\printbibliography[heading=none] 
 \clearpage  
 \section{Appendix A - MATLAB Code}
 \UseRawInputEncoding
