--- a/Latex Document/Thesis.tex
+++ b/Latex Document/Thesis.tex
@@ -287,59 +287,6 @@ When looking at these 240 pulses a number of them are too short and deemed to be
 If we remove the mean from some of the signals we are left with nothing, since some of the signals are straight lines.
 Talk about how the data could further classified into different pipe widths.
 \section{Results}
-\subsection{Visual Observations}
-Figure \ref{fig:SignalPulses} shows the signals for 225 pulses on each channel.
-\begin{figure}[]
-    \centering
-    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/SignalPulses.eps}
-    \caption{Signal Pulses for 225 pulses on each of the 12 signal channels}
-    \label{fig:SignalPulses}
-\end{figure}
-
-%Figure \ref{fig:SignalTrace21.20} shows 21:20 Actual moment under Rolls (Nm)
-%\begin{figure}[H]
-%    \centering
-%    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/SignalTrace21.20.png}
-%    \caption{Signal Trace 21.20}
-%    \label{fig:SignalTrace21.20}
-%\end{figure}
-%
-%Figure \ref{fig:SignalTrace21.12} shows ...
-%\begin{figure}[H]
-%    \centering
-%    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/SignalTrace21.12.png}
-%    \caption{Signal Trace 21.12}
-%    \label{fig:SignalTrace21.12}
-%\end{figure}
-%
-%Figure \ref{fig:SignalTrace21.28} shows ...
-%\begin{figure}[H]
-%    \centering
-%    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/SignalTrace21.28.png}
-%    \caption{Signal Trace 21.28}
-%    \label{fig:SignalTrace21.28}
-%\end{figure}
-%
-%Figure \ref{fig:SignalTrace21.07} shows 
-%\begin{figure}[H]
-%    \centering
-%    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/SignalTrace21.07.png}
-%    \caption{Signal Trace 21.07}
-%    \label{fig:SignalTrace21.07}
-%\end{figure}
-%
-%Figure \ref{fig:SignalTrace21.35} shows ...
-%\begin{figure}[H]
-%    \centering
-%    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/SignalTrace21.35.png}
-%    \caption{Signal Trace 21.35}
-%    \label{fig:SignalTrace21.35}
-%\end{figure}
-
-Signal 21.07 Angle over Rolls and 21.XX, 21.31, etc are fairly unexciting. They are just straight lines.
-Where as signal XX.XX contains a lot of information.
-21.35 is a constant signal so when we remove the mean all signals are exactly the same.
-
 \subsection{R-squared Correlation}
 An analysis of the raw signals was performed using R-squared value. Table \ref{correlationTable} shows the R-squared value for each pair of signals with the lower triangle being a replica of the upper triangle. 
 Figure \ref{fig:RawSignalCorrelationsFile1}
@@ -395,6 +342,67 @@ Figure \ref{fig:IdentifiedPulses} show
     \caption{Identified pulses in each files for file}
     \label{fig:IdentifiedPulses}
 \end{figure}
+
+\subsection{Visual Observations}
+Figure \ref{fig:SignalPulses} shows the signals for 225 pulses. Each sensor channel is plotted a different tile. 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/SignalPulses.eps}
+    \caption{Signal pulses for 225 pulses on each of the 12 signal channels}
+    \label{fig:SignalPulses}
+\end{figure}
+
+Signal 21.07 Angle over Rolls and 21.XX, 21.31, etc are fairly unexciting. They are just straight lines.
+Where as signal XX.XX contains a lot of information.
+21.35 is a constant signal so when we remove the mean all signals are exactly the same.
+
+Figure \ref{fig:SignalPulse5} shows 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/SignalPulse5.eps}
+    \caption{Signale 5 Pulses}
+    \label{fig:SignalPulse5}
+\end{figure}
+
+%Figure \ref{fig:SignalTrace21.20} shows 21:20 Actual moment under Rolls (Nm)
+%\begin{figure}[H]
+%    \centering
+%    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/SignalTrace21.20.png}
+%    \caption{Signal Trace 21.20}
+%    \label{fig:SignalTrace21.20}
+%\end{figure}
+
+%Figure \ref{fig:SignalTrace21.12} shows ...
+%\begin{figure}[H]
+%    \centering
+%    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/SignalTrace21.12.png}
+%    \caption{Signal Trace 21.12}
+%    \label{fig:SignalTrace21.12}
+%\end{figure}
+
+%Figure \ref{fig:SignalTrace21.28} shows ...
+%\begin{figure}[H]
+%    \centering
+%    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/SignalTrace21.28.png}
+%    \caption{Signal Trace 21.28}
+%    \label{fig:SignalTrace21.28}
+%\end{figure}
+
+%Figure \ref{fig:SignalTrace21.07} shows 
+%\begin{figure}[H]
+%    \centering
+%    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/SignalTrace21.07.png}
+%    \caption{Signal Trace 21.07}
+%    \label{fig:SignalTrace21.07}
+%\end{figure}
+
+%Figure \ref{fig:SignalTrace21.35} shows ...
+%\begin{figure}[H]
+%    \centering
+%    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/SignalTrace21.35.png}
+%    \caption{Signal Trace 21.35}
+%    \label{fig:SignalTrace21.35}
+%\end{figure}
 
 \subsection{Feature Extraction}
 
